--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 
     <div class="container">
         <div class="update-info">
-            <strong>🔄 Última actualización:</strong> 18 de Agosto 2025 |
-            <strong>📊 Datos procesados:</strong> 242 facturas de 94 clientes activos |
+            <strong>🔄 Última actualización:</strong> 25 de Agosto 2025 |
+            <strong>📊 Datos procesados:</strong> 301 facturas de 103 clientes activos |
             <strong class="positive-trend">📈 Mejora Continua</strong>
         </div>
 
@@ -293,33 +293,33 @@
             <div class="metrics-grid">
                 <div class="metric-card excellent-metric">
                     <h3>Total Facturas</h3>
-                    <div class="value">242</div>
-                    <div class="change">Facturas por cobrar <span class="improvement-badge">-26 vs anterior</span></div>
+                    <div class="value">301</div>
+                    <div class="change">Facturas por cobrar <span class="improvement-badge">+59 vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Monto Total</h3>
-                    <div class="value">$6,984</div>
-                    <div class="change">Total por cobrar <span class="improvement-badge">-$984 vs anterior</span></div>
+                    <div class="value">$9,610</div>
+                    <div class="change">Total por cobrar <span class="improvement-badge">+$2,626 vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Clientes Activos</h3>
-                    <div class="value">94</div>
-                    <div class="change">Clientes únicos <span class="improvement-badge">-4 vs anterior</span></div>
+                    <div class="value">103</div>
+                    <div class="change">Clientes únicos <span class="improvement-badge">+9 vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Promedio por Factura</h3>
-                    <div class="value">$28.86</div>
-                    <div class="change">Monto promedio <span class="improvement-badge">-$0.87 vs anterior</span></div>
+                    <div class="value">$31.93</div>
+                    <div class="change">Monto promedio <span class="improvement-badge">+$3.07 vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Días Promedio Cobro</h3>
-                    <div class="value positive-trend">18.9</div>
-                    <div class="change positive-trend">Excelente mejora <span class="improvement-badge">-4.5 días</span></div>
+                    <div class="value positive-trend">20.2</div>
+                    <div class="change positive-trend">Excelente gestión <span class="improvement-badge">+1.3 días</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Facturas Vencidas</h3>
-                    <div class="value positive-trend">59</div>
-                    <div class="change positive-trend">24.4% del total <span class="improvement-badge">-8.8% vs anterior</span></div>
+                    <div class="value positive-trend">74</div>
+                    <div class="change positive-trend">24.6% del total <span class="improvement-badge">+0.2% vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Ventas Mes Anterior</h3>
@@ -347,16 +347,16 @@
             <div class="alert-section">
                 <div class="alert-title">Situación Financiera - Mejora Continua</div>
                 <div class="alert-item">
-                    <strong>Mejora Significativa:</strong> Solo 59 facturas vencidas (24.4%) por $652.66 - <span class="positive-trend">Reducción de 8.8% vs período anterior</span>
+                    <strong>Gestión Sostenible:</strong> 74 facturas vencidas (24.6%) por $1,248.05 - <span class="positive-trend">Mantiene control</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Cartera Optimizada:</strong> 75.6% de facturas por vencer ($6,331.18) - <span class="positive-trend">Mejora en flujo de caja</span>
+                    <strong>Cartera Optimizada:</strong> 75.4% de facturas por vencer ($8,362.15) - <span class="positive-trend">Flujo de caja estable</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Ratio CxC vs Ventas:</strong> 2.4% - <span class="positive-trend">Mejora vs 2.7% anterior</span>
+                    <strong>Ratio CxC vs Ventas:</strong> 3.2% - <span class="positive-trend">Mantiene buen nivel</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Eficiencia de Cobro:</strong> 18.9 días promedio - <span class="positive-trend">Mejora de 4.5 días vs período anterior</span>
+                    <strong>Eficiencia de Cobro:</strong> 20.2 días promedio - <span class="positive-trend">Gestión eficiente</span>
                 </div>
             </div>
         </div>
@@ -366,18 +366,18 @@
             <div class="metrics-grid">
                 <div class="metric-card excellent-metric">
                     <h3>Por Vencer</h3>
-                    <div class="value positive-trend">$6,331</div>
-                    <div class="change positive-trend">183 facturas (75.6%) <span class="improvement-badge">+8.8% vs anterior</span></div>
+                    <div class="value positive-trend">$8,362</div>
+                    <div class="change positive-trend">227 facturas (75.4%) <span class="improvement-badge">-0.2% vs anterior</span></div>
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Vencida (0-30 días)</h3>
-                    <div class="value">$620</div>
-                    <div class="change">56 facturas (23.1%) <span class="improvement-badge">-3.0% vs anterior</span></div>
+                    <div class="value">$1,236</div>
+                    <div class="change">71 facturas (23.6%) <span class="improvement-badge">+0.5% vs anterior</span></div>
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Vencida (31-60 días)</h3>
-                    <div class="value">$33</div>
-                    <div class="change">3 facturas (1.2%) <span class="improvement-badge">-5.9% vs anterior</span></div>
+                    <div class="value">$12</div>
+                    <div class="change">3 facturas (1.0%) <span class="improvement-badge">-0.2% vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Vencida (61+ días)</h3>
@@ -392,12 +392,12 @@
             </div>
 
             <div class="alert-section">
-                <div class="alert-title">Situación de Cobros - Mejora Continua</div>
+                <div class="alert-title">Situación de Cobros - Gestión Sostenible</div>
                 <div class="alert-item">
-                    <strong>Gestión Mejorada:</strong> <span class="positive-trend">75.6% de facturas por vencer</span> - Mejora de 8.8% vs período anterior
+                    <strong>Gestión Mejorada:</strong> <span class="positive-trend">75.4% de facturas por vencer</span> - Mantiene buen nivel
                 </div>
                 <div class="alert-item">
-                    <strong>Vencimientos Reducidos:</strong> Solo $652.66 en facturas vencidas - <span class="positive-trend">Reducción de $305.69 vs anterior</span>
+                    <strong>Vencimientos Controlados:</strong> Solo $1,248.05 en facturas vencidas - <span class="positive-trend">Mantiene control</span>
                 </div>
                 <div class="alert-item">
                     <strong>Sin Morosidad Crítica:</strong> <span class="positive-trend">0 facturas con más de 60 días</span> - Mantiene excelente control
@@ -410,48 +410,48 @@
             <div class="chart-container">
                 <div class="chart-title">Top 10 Clientes por Monto Pendiente</div>
                 <div style="text-align: center; font-size: 0.9em; color: #666; margin-bottom: 15px; font-style: italic;">
-                    (*) Los valores incluyen facturas por vencer y vencidas - Actualización 18 de Agosto
+                    (*) Los valores incluyen facturas por vencer y vencidas - Actualización 25 de Agosto
                 </div>
                 <div class="client-list">
                     <div class="client-item">
                         <div class="client-name">1. INSTITUTO DIAGNISTICO SAN BERNARDINO</div>
-                        <div class="client-amount">$1,612.44</div>
+                        <div class="client-amount">$2,654.63</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">2. AC CENTRO MEDICO DOCENTE LA TRINIDAD</div>
-                        <div class="client-amount">$1,438.72</div>
+                        <div class="client-name">2. BANCO DEL TESORO CA</div>
+                        <div class="client-amount">$994.57</div>
                     </div>
                     <div class="client-item">
                         <div class="client-name">3. MIRANDA GAS MIRANGAS SA</div>
-                        <div class="client-amount">$296.91</div>
+                        <div class="client-amount">$717.94</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">4. BANCO DEL TESORO CA</div>
-                        <div class="client-amount">$283.42</div>
+                        <div class="client-name">4. AC CENTRO MEDICO DOCENTE LA TRINIDAD</div>
+                        <div class="client-amount">$365.29</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">5. MARIA CLAVIER</div>
-                        <div class="client-amount">$210.89</div>
+                        <div class="client-name">5. Eidys Vladimir Diaz Travieso</div>
+                        <div class="client-amount">$276.17</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">6. INSTITUTO CUMBRES</div>
+                        <div class="client-name">6. MARIA CLAVIER</div>
+                        <div class="client-amount">$265.14</div>
+                    </div>
+                    <div class="client-item">
+                        <div class="client-name">7. BIOTECH LABORATORIOS CA</div>
+                        <div class="client-amount">$245.07</div>
+                    </div>
+                    <div class="client-item">
+                        <div class="client-name">8. JOSE CLAVIER</div>
+                        <div class="client-amount">$211.72</div>
+                    </div>
+                    <div class="client-item">
+                        <div class="client-name">9. INSTITUTO CUMBRES</div>
                         <div class="client-amount">$205.45</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">7. AC CENTRO MEDICO DOCENTE LA TRINIDAD (Sucursal)</div>
+                        <div class="client-name">10. AC CENTRO MEDICO DOCENTE LA TRINIDAD (Sucursal)</div>
                         <div class="client-amount">$151.93</div>
-                    </div>
-                    <div class="client-item">
-                        <div class="client-name">8. Jesus Enrique Navarro Rosales</div>
-                        <div class="client-amount">$137.48</div>
-                    </div>
-                    <div class="client-item">
-                        <div class="client-name">9. Maria Eugenia Blanco Lauria</div>
-                        <div class="client-amount">$119.22</div>
-                    </div>
-                    <div class="client-item">
-                        <div class="client-name">10. Miriam Zulay Contreras De Alayon</div>
-                        <div class="client-amount">$104.55</div>
                     </div>
                 </div>
             </div>
@@ -497,13 +497,13 @@
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Riesgo Medio</h3>
-                    <div class="value">$2,573</div>
-                    <div class="change">7 facturas <span class="improvement-badge">-19 facturas vs anterior</span></div>
+                    <div class="value">$3,309</div>
+                    <div class="change">10 facturas <span class="improvement-badge">+3 facturas vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Riesgo Bajo</h3>
-                    <div class="value positive-trend">$4,411</div>
-                    <div class="change positive-trend">235 facturas <span class="improvement-badge">97.1% del total</span></div>
+                    <div class="value positive-trend">$6,301</div>
+                    <div class="change positive-trend">291 facturas <span class="improvement-badge">96.7% del total</span></div>
                 </div>
             </div>
 
@@ -518,10 +518,10 @@
                     <strong>Sin Riesgo Alto:</strong> <span class="positive-trend">0 facturas de alto riesgo</span> - Mantiene excelente gestión preventiva
                 </div>
                 <div class="alert-item">
-                    <strong>Riesgo Medio Reducido:</strong> Solo 7 facturas de riesgo medio ($2,573) - <span class="positive-trend">Reducción de 19 facturas vs anterior</span>
+                    <strong>Riesgo Medio Controlado:</strong> Solo 10 facturas de riesgo medio ($3,309) - <span class="positive-trend">Mantiene control</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Cartera Optimizada:</strong> 97.1% de facturas de bajo riesgo - <span class="positive-trend">Mejora vs 90.3% anterior</span>
+                    <strong>Cartera Optimizada:</strong> 96.7% de facturas de bajo riesgo - <span class="positive-trend">Mantiene buen nivel</span>
                 </div>
                 <div class="alert-item">
                     <strong>Estrategia Exitosa:</strong> Las políticas implementadas muestran resultados positivos - <span class="positive-trend">Continuar con el enfoque actual</span>
@@ -574,7 +574,7 @@
         function renderOverviewCharts() {
             // Gráfico de torta - Estado de vencimiento
             const agingData = [{
-                values: [6331.18, 619.74, 32.92],
+                values: [8362.15, 1235.63, 12.42],
                 labels: ['Por vencer', 'Vencida (0-30 días)', 'Vencida (31-60 días)'],
                 type: 'pie',
                 marker: {
@@ -592,8 +592,8 @@
 
             // Gráfico de barras - Top 5 clientes
             const topClientsData = [{
-                x: [1612.44, 1438.72, 296.91, 283.42, 210.89],
-                y: ['INSTITUTO DIAGNISTICO SAN BERNARDINO', 'AC CENTRO MEDICO DOCENTE LA TRINIDAD', 'MIRANDA GAS MIRANGAS SA', 'BANCO DEL TESORO CA', 'MARIA CLAVIER'],
+                x: [2654.63, 994.57, 717.94, 365.29, 276.17],
+                y: ['INSTITUTO DIAGNISTICO SAN BERNARDINO', 'BANCO DEL TESORO CA', 'MIRANDA GAS MIRANGAS SA', 'AC CENTRO MEDICO DOCENTE LA TRINIDAD', 'Eidys Vladimir Diaz Travieso'],
                 type: 'bar',
                 orientation: 'h',
                 marker: {
@@ -615,14 +615,14 @@
             const agingDetailData = [
                 {
                     x: ['Por vencer', 'Vencida (0-30)', 'Vencida (31-60)', 'Vencida (61+)'],
-                    y: [183, 56, 3, 0],
+                    y: [227, 71, 3, 0],
                     name: 'Cantidad de Facturas',
                     type: 'bar',
                     marker: {color: locatelColors[0]}
                 },
                 {
                     x: ['Por vencer', 'Vencida (0-30)', 'Vencida (31-60)', 'Vencida (61+)'],
-                    y: [6331.18, 619.74, 32.92, 0],
+                    y: [8362.15, 1235.63, 12.42, 0],
                     name: 'Monto ($)',
                     type: 'bar',
                     yaxis: 'y2',
@@ -642,7 +642,7 @@
         function renderClientCharts() {
             // Distribución por cliente (top 10 vs resto)
             const clientDistData = [{
-                values: [4560.51, 2423.33],
+                values: [6085.81, 3524.39],
                 labels: ['Top 10 Clientes', 'Otros Clientes'],
                 type: 'pie',
                 marker: {
@@ -658,7 +658,7 @@
             // Concentración de cobros
             const concentrationData = [{
                 x: ['Top 3', 'Top 5', 'Top 10', 'Todos'],
-                y: [55.2, 58.4, 65.3, 100],
+                y: [45.4, 51.9, 63.3, 100],
                 type: 'bar',
                 marker: {color: locatelColors[2]}
             }];
@@ -675,7 +675,7 @@
             // Evolución mensual
             const monthlyData = [{
                 x: ['Jun 2025', 'Jul 2025', 'Ago 2025'],
-                y: [85, 120, 37],
+                y: [85, 120, 96],
                 type: 'scatter',
                 mode: 'lines+markers',
                 line: {color: locatelColors[1], width: 3}
@@ -690,7 +690,7 @@
             // Distribución mensual
             const monthlyDistData = [{
                 x: ['Jun', 'Jul', 'Ago'],
-                y: [85, 120, 37],
+                y: [85, 120, 96],
                 type: 'bar',
                 marker: {color: locatelColors[2]}
             }];
@@ -704,7 +704,7 @@
             // Días de cobro promedio
             const collectionDaysData = [{
                 x: ['Promedio General'],
-                y: [18.9],
+                y: [20.2],
                 type: 'bar',
                 marker: {color: locatelColors[4]}
             }];
@@ -721,7 +721,7 @@
             // Matriz de riesgo
             const riskData = [{
                 x: ['Bajo', 'Medio', 'Alto'],
-                y: [4410.92, 2572.92, 0],
+                y: [6301.06, 3309.14, 0],
                 type: 'bar',
                 marker: {
                     color: ['#7CC141', '#F79617', '#dc3545']
