--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 
     <div class="container">
         <div class="update-info">
-            <strong>🔄 Última actualización:</strong> 25 de Agosto 2025 |
-            <strong>📊 Datos procesados:</strong> 301 facturas de 103 clientes activos |
+            <strong>🔄 Última actualización:</strong> 27 de Agosto 2025 |
+            <strong>📊 Datos procesados:</strong> 285 facturas de 96 clientes activos |
             <strong class="positive-trend">📈 Mejora Continua</strong>
         </div>
 
@@ -293,33 +293,33 @@
             <div class="metrics-grid">
                 <div class="metric-card excellent-metric">
                     <h3>Total Facturas</h3>
-                    <div class="value">301</div>
-                    <div class="change">Facturas por cobrar <span class="improvement-badge">+59 vs anterior</span></div>
+                    <div class="value">285</div>
+                    <div class="change">Facturas por cobrar <span class="improvement-badge">-16 vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Monto Total</h3>
-                    <div class="value">$9,610</div>
-                    <div class="change">Total por cobrar <span class="improvement-badge">+$2,626 vs anterior</span></div>
+                    <div class="value">$8,935</div>
+                    <div class="change">Total por cobrar <span class="improvement-badge">-$675 vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Clientes Activos</h3>
-                    <div class="value">103</div>
-                    <div class="change">Clientes únicos <span class="improvement-badge">+9 vs anterior</span></div>
+                    <div class="value">96</div>
+                    <div class="change">Clientes únicos <span class="improvement-badge">-7 vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Promedio por Factura</h3>
-                    <div class="value">$31.93</div>
-                    <div class="change">Monto promedio <span class="improvement-badge">+$3.07 vs anterior</span></div>
+                    <div class="value">$31.35</div>
+                    <div class="change">Monto promedio <span class="improvement-badge">-$0.58 vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Días Promedio Cobro</h3>
-                    <div class="value positive-trend">20.2</div>
-                    <div class="change positive-trend">Excelente gestión <span class="improvement-badge">+1.3 días</span></div>
+                    <div class="value positive-trend">20.7</div>
+                    <div class="change positive-trend">Excelente gestión <span class="improvement-badge">+0.5 días</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Facturas Vencidas</h3>
-                    <div class="value positive-trend">74</div>
-                    <div class="change positive-trend">24.6% del total <span class="improvement-badge">+0.2% vs anterior</span></div>
+                    <div class="value positive-trend">79</div>
+                    <div class="change positive-trend">27.7% del total <span class="improvement-badge">+3.1% vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Ventas Mes Anterior</h3>
@@ -347,16 +347,16 @@
             <div class="alert-section">
                 <div class="alert-title">Situación Financiera - Mejora Continua</div>
                 <div class="alert-item">
-                    <strong>Gestión Sostenible:</strong> 74 facturas vencidas (24.6%) por $1,248.05 - <span class="positive-trend">Mantiene control</span>
+                    <strong>Gestión Sostenible:</strong> 79 facturas vencidas (27.7%) por $1,333.93 - <span class="positive-trend">Mantiene control</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Cartera Optimizada:</strong> 75.4% de facturas por vencer ($8,362.15) - <span class="positive-trend">Flujo de caja estable</span>
+                    <strong>Cartera Optimizada:</strong> 72.3% de facturas por vencer ($7,601.04) - <span class="positive-trend">Flujo de caja estable</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Ratio CxC vs Ventas:</strong> 3.2% - <span class="positive-trend">Mantiene buen nivel</span>
+                    <strong>Ratio CxC vs Ventas:</strong> 3.0% - <span class="positive-trend">Mantiene buen nivel</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Eficiencia de Cobro:</strong> 20.2 días promedio - <span class="positive-trend">Gestión eficiente</span>
+                    <strong>Eficiencia de Cobro:</strong> 20.7 días promedio - <span class="positive-trend">Gestión eficiente</span>
                 </div>
             </div>
         </div>
@@ -366,18 +366,18 @@
             <div class="metrics-grid">
                 <div class="metric-card excellent-metric">
                     <h3>Por Vencer</h3>
-                    <div class="value positive-trend">$8,362</div>
-                    <div class="change positive-trend">227 facturas (75.4%) <span class="improvement-badge">-0.2% vs anterior</span></div>
+                    <div class="value positive-trend">$7,601</div>
+                    <div class="change positive-trend">206 facturas (72.3%) <span class="improvement-badge">-3.1% vs anterior</span></div>
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Vencida (0-30 días)</h3>
-                    <div class="value">$1,236</div>
-                    <div class="change">71 facturas (23.6%) <span class="improvement-badge">+0.5% vs anterior</span></div>
+                    <div class="value">$1,334</div>
+                    <div class="change">79 facturas (27.7%) <span class="improvement-badge">+4.1% vs anterior</span></div>
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Vencida (31-60 días)</h3>
-                    <div class="value">$12</div>
-                    <div class="change">3 facturas (1.0%) <span class="improvement-badge">-0.2% vs anterior</span></div>
+                    <div class="value">$0</div>
+                    <div class="change">0 facturas (0%) <span class="improvement-badge">-1.0% vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Vencida (61+ días)</h3>
@@ -394,10 +394,10 @@
             <div class="alert-section">
                 <div class="alert-title">Situación de Cobros - Gestión Sostenible</div>
                 <div class="alert-item">
-                    <strong>Gestión Mejorada:</strong> <span class="positive-trend">75.4% de facturas por vencer</span> - Mantiene buen nivel
+                    <strong>Gestión Mejorada:</strong> <span class="positive-trend">72.3% de facturas por vencer</span> - Mantiene buen nivel
                 </div>
                 <div class="alert-item">
-                    <strong>Vencimientos Controlados:</strong> Solo $1,248.05 en facturas vencidas - <span class="positive-trend">Mantiene control</span>
+                    <strong>Vencimientos Controlados:</strong> Solo $1,333.93 en facturas vencidas - <span class="positive-badge">Mantiene control</span>
                 </div>
                 <div class="alert-item">
                     <strong>Sin Morosidad Crítica:</strong> <span class="positive-trend">0 facturas con más de 60 días</span> - Mantiene excelente control
@@ -410,7 +410,7 @@
             <div class="chart-container">
                 <div class="chart-title">Top 10 Clientes por Monto Pendiente</div>
                 <div style="text-align: center; font-size: 0.9em; color: #666; margin-bottom: 15px; font-style: italic;">
-                    (*) Los valores incluyen facturas por vencer y vencidas - Actualización 25 de Agosto
+                    (*) Los valores incluyen facturas por vencer y vencidas - Actualización 27 de Agosto
                 </div>
                 <div class="client-list">
                     <div class="client-item">
@@ -419,11 +419,11 @@
                     </div>
                     <div class="client-item">
                         <div class="client-name">2. BANCO DEL TESORO CA</div>
-                        <div class="client-amount">$994.57</div>
+                        <div class="client-amount">$1,111.87</div>
                     </div>
                     <div class="client-item">
                         <div class="client-name">3. MIRANDA GAS MIRANGAS SA</div>
-                        <div class="client-amount">$717.94</div>
+                        <div class="client-amount">$671.30</div>
                     </div>
                     <div class="client-item">
                         <div class="client-name">4. AC CENTRO MEDICO DOCENTE LA TRINIDAD</div>
@@ -434,24 +434,24 @@
                         <div class="client-amount">$276.17</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">6. MARIA CLAVIER</div>
-                        <div class="client-amount">$265.14</div>
-                    </div>
-                    <div class="client-item">
-                        <div class="client-name">7. BIOTECH LABORATORIOS CA</div>
-                        <div class="client-amount">$245.07</div>
-                    </div>
-                    <div class="client-item">
-                        <div class="client-name">8. JOSE CLAVIER</div>
-                        <div class="client-amount">$211.72</div>
-                    </div>
-                    <div class="client-item">
-                        <div class="client-name">9. INSTITUTO CUMBRES</div>
+                        <div class="client-name">6. INSTITUTO CUMBRES</div>
                         <div class="client-amount">$205.45</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">10. AC CENTRO MEDICO DOCENTE LA TRINIDAD (Sucursal)</div>
+                        <div class="client-name">7. MARIA CLAVIER</div>
+                        <div class="client-amount">$153.63</div>
+                    </div>
+                    <div class="client-item">
+                        <div class="client-name">8. AC CENTRO MEDICO DOCENTE LA TRINIDAD (Sucursal)</div>
                         <div class="client-amount">$151.93</div>
+                    </div>
+                    <div class="client-item">
+                        <div class="client-name">9. Jesus Enrique Navarro Rosales</div>
+                        <div class="client-amount">$137.48</div>
+                    </div>
+                    <div class="client-item">
+                        <div class="client-name">10. Soraima Revelo</div>
+                        <div class="client-amount">$137.09</div>
                     </div>
                 </div>
             </div>
@@ -497,13 +497,13 @@
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Riesgo Medio</h3>
-                    <div class="value">$3,309</div>
-                    <div class="change">10 facturas <span class="improvement-badge">+3 facturas vs anterior</span></div>
+                    <div class="value">$3,052</div>
+                    <div class="change">6 facturas <span class="improvement-badge">-4 facturas vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Riesgo Bajo</h3>
-                    <div class="value positive-trend">$6,301</div>
-                    <div class="change positive-trend">291 facturas <span class="improvement-badge">96.7% del total</span></div>
+                    <div class="value positive-trend">$5,883</div>
+                    <div class="change positive-trend">279 facturas <span class="improvement-badge">97.9% del total</span></div>
                 </div>
             </div>
 
@@ -518,10 +518,10 @@
                     <strong>Sin Riesgo Alto:</strong> <span class="positive-trend">0 facturas de alto riesgo</span> - Mantiene excelente gestión preventiva
                 </div>
                 <div class="alert-item">
-                    <strong>Riesgo Medio Controlado:</strong> Solo 10 facturas de riesgo medio ($3,309) - <span class="positive-trend">Mantiene control</span>
+                    <strong>Riesgo Medio Controlado:</strong> Solo 6 facturas de riesgo medio ($3,052) - <span class="positive-trend">Mantiene control</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Cartera Optimizada:</strong> 96.7% de facturas de bajo riesgo - <span class="positive-trend">Mantiene buen nivel</span>
+                    <strong>Cartera Optimizada:</strong> 97.9% de facturas de bajo riesgo - <span class="positive-trend">Mantiene buen nivel</span>
                 </div>
                 <div class="alert-item">
                     <strong>Estrategia Exitosa:</strong> Las políticas implementadas muestran resultados positivos - <span class="positive-trend">Continuar con el enfoque actual</span>
@@ -574,11 +574,11 @@
         function renderOverviewCharts() {
             // Gráfico de torta - Estado de vencimiento
             const agingData = [{
-                values: [8362.15, 1235.63, 12.42],
-                labels: ['Por vencer', 'Vencida (0-30 días)', 'Vencida (31-60 días)'],
+                values: [7601.04, 1333.93],
+                labels: ['Por vencer', 'Vencida (0-30 días)'],
                 type: 'pie',
                 marker: {
-                    colors: ['#7CC141', '#F79617', '#ff6b6b']
+                    colors: ['#7CC141', '#F79617']
                 },
                 textinfo: 'label+percent',
                 textposition: 'outside'
@@ -592,7 +592,7 @@
 
             // Gráfico de barras - Top 5 clientes
             const topClientsData = [{
-                x: [2654.63, 994.57, 717.94, 365.29, 276.17],
+                x: [2654.63, 1111.87, 671.30, 365.29, 276.17],
                 y: ['INSTITUTO DIAGNISTICO SAN BERNARDINO', 'BANCO DEL TESORO CA', 'MIRANDA GAS MIRANGAS SA', 'AC CENTRO MEDICO DOCENTE LA TRINIDAD', 'Eidys Vladimir Diaz Travieso'],
                 type: 'bar',
                 orientation: 'h',
@@ -615,14 +615,14 @@
             const agingDetailData = [
                 {
                     x: ['Por vencer', 'Vencida (0-30)', 'Vencida (31-60)', 'Vencida (61+)'],
-                    y: [227, 71, 3, 0],
+                    y: [206, 79, 0, 0],
                     name: 'Cantidad de Facturas',
                     type: 'bar',
                     marker: {color: locatelColors[0]}
                 },
                 {
                     x: ['Por vencer', 'Vencida (0-30)', 'Vencida (31-60)', 'Vencida (61+)'],
-                    y: [8362.15, 1235.63, 12.42, 0],
+                    y: [7601.04, 1333.93, 0, 0],
                     name: 'Monto ($)',
                     type: 'bar',
                     yaxis: 'y2',
@@ -642,7 +642,7 @@
         function renderClientCharts() {
             // Distribución por cliente (top 10 vs resto)
             const clientDistData = [{
-                values: [6085.81, 3524.39],
+                values: [6875.88, 2059.09],
                 labels: ['Top 10 Clientes', 'Otros Clientes'],
                 type: 'pie',
                 marker: {
@@ -658,7 +658,7 @@
             // Concentración de cobros
             const concentrationData = [{
                 x: ['Top 3', 'Top 5', 'Top 10', 'Todos'],
-                y: [45.4, 51.9, 63.3, 100],
+                y: [49.7, 58.3, 77.0, 100],
                 type: 'bar',
                 marker: {color: locatelColors[2]}
             }];
@@ -674,8 +674,8 @@
         function renderTrendCharts() {
             // Evolución mensual
             const monthlyData = [{
-                x: ['Jun 2025', 'Jul 2025', 'Ago 2025'],
-                y: [85, 120, 96],
+                x: ['Jul 2025', 'Ago 2025'],
+                y: [180, 105],
                 type: 'scatter',
                 mode: 'lines+markers',
                 line: {color: locatelColors[1], width: 3}
@@ -689,8 +689,8 @@
 
             // Distribución mensual
             const monthlyDistData = [{
-                x: ['Jun', 'Jul', 'Ago'],
-                y: [85, 120, 96],
+                x: ['Jul', 'Ago'],
+                y: [180, 105],
                 type: 'bar',
                 marker: {color: locatelColors[2]}
             }];
@@ -704,7 +704,7 @@
             // Días de cobro promedio
             const collectionDaysData = [{
                 x: ['Promedio General'],
-                y: [20.2],
+                y: [20.7],
                 type: 'bar',
                 marker: {color: locatelColors[4]}
             }];
@@ -721,7 +721,7 @@
             // Matriz de riesgo
             const riskData = [{
                 x: ['Bajo', 'Medio', 'Alto'],
-                y: [6301.06, 3309.14, 0],
+                y: [5883.32, 3051.65, 0],
                 type: 'bar',
                 marker: {
                     color: ['#7CC141', '#F79617', '#dc3545']
